--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <header class="navigation">
+        <section>
+            <div class="heroImg">
+                <img src="images/photo.png">
+            </div>
+        </section>
         <div class="inline-block">
             <img src="logo">
             <nav class="inline-block">
