--- a/index.html
+++ b/index.html
@@ -4,25 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .nav li {
+            display: inline-block;
+            font-size: medium;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
-    <header class="navigation">
-        <section>
-            <div class="heroImg">
-                <img src="images/photo.png">
-            </div>
-        </section>
-        <div class="inline-block">
-            <img src="logo">
-            <nav class="inline-block">
-                <ul>
-                    <li>About</li>
-                    <li>Skills</li>
-                    <li>Work</li>
-                    <li>Contact</li>
+    <header>
+        <div class="inline-block and logo">
+            <img src="images/logo bluraccoon2 4.png">
+            <nav>
+                <ul class="nav">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <section>
+        <div class="heroImg">
+            <img src="images/photo.png">
+            <p>This is my about me!</p>
+            <button type="button">Resume</button>
+        </div>
+    </section>
+    <footer>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+      </footer>
 </body>
 </html>
