--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -14,8 +15,9 @@
 </head>
 <body>
     <header>
-        <div class="inline-block and logo">
-            <img src="images/logo bluraccoon2 4.png">
+        <div class="inline-block">
+            <div class="logo">
+            <img src="images/logo bluraccoon2 4.png"></div>
             <nav>
                 <ul class="nav">
                     <li><a href="#about">About</a></li>
